# substrate-permissioning

./: .gitignore  README.md
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  service.rs
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
