[build-dependencies.substrate-build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '2.0.0-rc4'

[package]
authors = ['gautamdhameja']
build = 'build.rs'
description = 'Substrate Permissioning Sample'
edition = '2018'
license = 'Apache-2.0'
name = 'substrate-permissioning-sample'
repository = 'https://github.com/gautamdhameja/substrate-permissioning'
version = '2.0.0-rc4'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[[bin]]
name = 'substrate-permissioning-sample'

[dependencies]
futures = '0.3.4'
log = '0.4.8'
parking_lot = '0.10.0'
structopt = '0.3.8'

[dependencies.substrate-permissioning-runtime]
path = '../runtime'
version = '2.0.0-rc4'

[dependencies.sc-basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '0.8.0-rc4'

[dependencies.sc-cli]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '0.8.0-rc4'

[dependencies.sc-client-api]
git = 'https://github.com/paritytech/substrate.git'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '2.0.0-rc4'

[dependencies.sc-consensus]
git = 'https://github.com/paritytech/substrate.git'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '0.8.0-rc4'

[dependencies.sc-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '0.8.0-rc4'

[dependencies.sc-executor]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '0.8.0-rc4'

[dependencies.sc-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '0.8.0-rc4'

[dependencies.sc-network]
git = 'https://github.com/paritytech/substrate.git'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '0.8.0-rc4'

[dependencies.sc-service]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '0.8.0-rc4'

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '2.0.0-rc4'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '0.8.0-rc4'

[dependencies.sp-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '0.8.0-rc4'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '2.0.0-rc4'

[dependencies.sp-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '2.0.0-rc4'

[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate.git'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '2.0.0-rc4'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '2.0.0-rc4'

[dependencies.sp-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '2.0.0-rc4'
