[dependencies.validatorset]
package = 'substrate-validator-set'
git = 'https://github.com/gautamdhameja/substrate-validator-set'
default-features = false
version = '0.2.0'

[dependencies.accountset]
package = 'substrate-account-set'
git = 'https://github.com/gautamdhameja/substrate-account-set.git'
default-features = false
version = '0.3.0'

[dependencies.aura]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-aura'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '2.0.0-rc4'

[dependencies.balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-balances'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '2.0.0-rc4'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.1'

[dependencies.frame-executive]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '2.0.0-rc4'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '2.0.0-rc4'

[dependencies.grandpa]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-grandpa'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '2.0.0-rc4'

[dependencies.randomness-collective-flip]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-randomness-collective-flip'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '2.0.0-rc4'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-session'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '2.0.0-rc4'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '2.0.0-rc4'

[dependencies.sp-block-builder]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '2.0.0-rc4'

[dependencies.sp-consensus-aura]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '0.8.0-rc4'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '2.0.0-rc4'

[dependencies.sp-inherents]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '2.0.0-rc4'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '2.0.0-rc4'

[dependencies.sp-offchain]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '2.0.0-rc4'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '2.0.0-rc4'

[dependencies.sp-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '2.0.0-rc4'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '2.0.0-rc4'

[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '2.0.0-rc4'

[dependencies.sp-version]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '2.0.0-rc4'

[dependencies.sudo]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-sudo'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '2.0.0-rc4'

[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '2.0.0-rc4'

[dependencies.template]
default-features = false
package = 'pallet-template'
path = '../pallets/template'
version = '2.0.0-rc4'

[dependencies.timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-timestamp'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '2.0.0-rc4'

[dependencies.transaction-payment]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-transaction-payment'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '2.0.0-rc4'
[build-dependencies.wasm-builder-runner]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-wasm-builder-runner'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '1.0.5'

[features]
default = ['std']
std = [
    'aura/std',
    'balances/std',
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'grandpa/std',
    'randomness-collective-flip/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'sudo/std',
    'system/std',
    'timestamp/std',
    'transaction-payment/std',
    'template/std',
    'validatorset/std',
    'session/std',
    'accountset/std'
]

[package]
authors = ['gautamdhameja']
edition = '2018'
license = 'Apache-2.0'
name = 'substrate-permissioning-runtime'
version = '2.0.0-rc4'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
