[package]
description = 'FRAME pallet template'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Apache-2.0'
name = 'pallet-template'
repository = 'https://github.com/paritytech/substrate/'
version = '2.0.0-rc4'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '2.0.0-rc4'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '2.0.0-rc4'

[dev-dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '2.0.0-rc4'
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.1'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '2.0.0-rc4'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4'
version = '2.0.0-rc4'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
]
